# make87-file-uploader

./: .gitignore  MAKE87.yml  README.md  pyproject.toml
app/: main.py
